--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,10 +3,11 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": []
+    "baseUrl": "",
+    "types": ["node"]
   },
   "exclude": [
-    "src/test.ts",
+    "test.ts",
     "**/*.spec.ts"
   ]
 }
