--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^6.0.3",
     "amazon-cognito-identity-js": "^2.0.11",
     "aws-sdk": "^2.263.1",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
@@ -40,7 +40,7 @@
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "json-loader": "^0.5.7",
-    "karma": "~1.7.1",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
