--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/jspdf/dist/jspdf.min.js" ]
           },
           "configurations": {
             "production": {
