--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.263.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "html2pdf.js": "^0.9.0",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
