--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "codelyzer": "~4.2.1",
     "grunt": "^1.0.3",
     "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-uglify": "^3.3.0",
